[gd_scene load_steps=46 format=2]

[ext_resource path="res://code/manager/interface/InterfaceGameManager.gd" type="Script" id=1]
[ext_resource path="res://interfaces/norse/img/background.png" type="Texture" id=2]
[ext_resource path="res://interfaces/norse/tile/TilesHUB.tres" type="TileSet" id=3]
[ext_resource path="res://interfaces/norse/img/table.png" type="Texture" id=4]
[ext_resource path="res://interfaces/norse/img/interface_11.png" type="Texture" id=5]
[ext_resource path="res://interfaces/norse/img/interface_12.png" type="Texture" id=6]
[ext_resource path="res://interfaces/norse/font/Norsebold.otf" type="DynamicFontData" id=7]
[ext_resource path="res://game/player/avatar/norse/sigrdrifa/Sidgrida.tscn" type="PackedScene" id=8]
[ext_resource path="res://interfaces/norse/img/papyrus.png" type="Texture" id=9]
[ext_resource path="res://interfaces/norse/img/interface_19.png" type="Texture" id=11]
[ext_resource path="res://interfaces/StatusInterface.tscn" type="PackedScene" id=12]
[ext_resource path="res://interfaces/RuneDetailInterface.tscn" type="PackedScene" id=13]
[ext_resource path="res://interfaces/NextInterface.tscn" type="PackedScene" id=14]
[ext_resource path="res://interfaces/norse/img/hourglass/0.png" type="Texture" id=15]
[ext_resource path="res://interfaces/norse/img/hourglass/1.png" type="Texture" id=16]
[ext_resource path="res://interfaces/norse/img/hourglass/2.png" type="Texture" id=17]
[ext_resource path="res://interfaces/norse/img/hourglass/3.png" type="Texture" id=18]
[ext_resource path="res://interfaces/norse/img/hourglass/4.png" type="Texture" id=19]
[ext_resource path="res://interfaces/norse/img/hourglass/5.png" type="Texture" id=20]
[ext_resource path="res://interfaces/norse/img/hourglass/6.png" type="Texture" id=21]
[ext_resource path="res://interfaces/norse/img/hourglass/7.png" type="Texture" id=22]
[ext_resource path="res://interfaces/norse/element/Coin.tscn" type="PackedScene" id=23]
[ext_resource path="res://interfaces/norse/element/Axe.tscn" type="PackedScene" id=24]
[ext_resource path="res://interfaces/norse/element/Eye.tscn" type="PackedScene" id=25]
[ext_resource path="res://interfaces/norse/img/Runes/Font/RuneF_03.png" type="Texture" id=26]
[ext_resource path="res://interfaces/norse/font/NordicaRegular.otf" type="DynamicFontData" id=27]
[ext_resource path="res://interfaces/norse/img/battlebutton/normal.png" type="Texture" id=28]
[ext_resource path="res://interfaces/norse/img/battlebutton/hoover.png" type="Texture" id=29]
[ext_resource path="res://interfaces/norse/img/battlebutton/diseable.png" type="Texture" id=30]
[ext_resource path="res://interfaces/norse/img/battlebutton/press.png" type="Texture" id=31]
[ext_resource path="res://interfaces/norse/img/Runes/Icon/RuneI_00.png" type="Texture" id=32]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": false,
"name": "open",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 35
outline_size = 2
outline_color = Color( 0.305882, 0.254902, 0.054902, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 26
outline_size = 3
outline_color = Color( 0.027451, 0.0156863, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 36
outline_size = 2
outline_color = Color( 0.219608, 0.113725, 0.0117647, 1 )
use_filter = true
extra_spacing_top = 5
extra_spacing_char = 1
font_data = ExtResource( 7 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "tic-tac",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=8]
size = 20
outline_size = 2
outline_color = Color( 0.168627, 0.14902, 0.0156863, 1 )
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=10]
size = 8
outline_size = 1
outline_color = Color( 0.0470588, 0.196078, 0.0156863, 1 )
use_filter = true
font_data = ExtResource( 27 )

[sub_resource type="DynamicFont" id=11]
size = 8
outline_size = 1
outline_color = Color( 0.309804, 0.0156863, 0.0156863, 1 )
use_filter = true
font_data = ExtResource( 27 )

[sub_resource type="Animation" id=12]
resource_name = "HIDE_RUNE_DETAIL"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Layer 2 - GUI/RuneDetailInterface:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Layer 2 - GUI/Subtitle:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Layer 2 - GUI/StatusInterface:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Layer 2 - GUI/RuneDetailInterface:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Layer 2 - GUI/Subtitle:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=17]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Layer 2 - GUI/StatusInterface:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="GameInterface" type="Node2D" groups=[
"interface_game",
]]
position = Vector2( 0, 1 )
script = ExtResource( 1 )

[node name="Layer 0 - Background" type="CanvasLayer" parent="."]
layer = -3

[node name="TextureRect" type="TextureRect" parent="Layer 0 - Background"]
margin_right = 640.0
margin_bottom = 360.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Layer 1 - Border" type="CanvasLayer" parent="."]
layer = -2

[node name="TileMap" type="TileMap" parent="Layer 1 - Border"]
scale = Vector2( 0.508, 0.535 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 84, 84 )
format = 1
tile_data = PoolIntArray( 0, -1073741824, 0, 1, -1073741823, 0, 2, -1073741823, 0, 3, -1073741822, 0, 11, -536870910, 0, 12, -536870911, 0, 13, -536870911, 0, 14, 0, 0, 65536, 536870913, 0, 65550, 1073741825, 0, 131072, 536870913, 0, 131086, 1073741825, 0, 196608, 536870913, 0, 196622, 1073741825, 0, 262144, 536870913, 0, 262158, 1073741825, 0, 327680, 536870913, 0, 327694, 1073741825, 0, 393216, 1610612737, 0, 393230, 1073741825, 0, 458752, -2147483648, 0, 458753, -2147483647, 0, 458754, -2147483646, 0, 458764, -1610612734, 0, 458765, -1610612735, 0, 458766, 1073741824, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Table" type="Sprite" parent="Layer 1 - Border"]
position = Vector2( 321, 339 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )

[node name="Layer 2 - GUI" type="CanvasLayer" parent="."]

[node name="Bag" type="AnimatedSprite" parent="Layer 2 - GUI"]
position = Vector2( 144, 318 )
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 1 )

[node name="LabelBag" type="Label" parent="Layer 2 - GUI/Bag"]
margin_left = -36.6667
margin_top = -5.83331
margin_right = 27.3333
margin_bottom = 87.1667
rect_min_size = Vector2( 64, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.815686, 0.815686, 0.815686, 1 )
text = "5
"
align = 1

[node name="ButtonBag" type="Button" parent="Layer 2 - GUI/Bag"]
margin_left = -34.0
margin_top = -17.0
margin_right = 23.0
margin_bottom = 37.0
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sidgrida" parent="Layer 2 - GUI" instance=ExtResource( 8 )]
position = Vector2( -45, 58 )

[node name="Papyrus" type="TextureRect" parent="Layer 2 - GUI"]
margin_left = 528.0
margin_top = 214.0
margin_right = 666.0
margin_bottom = 394.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridPapyrus" type="GridContainer" parent="Layer 2 - GUI/Papyrus"]
margin_left = 25.5319
margin_top = 30.0254
margin_right = 115.532
margin_bottom = 140.025
grow_vertical = 2
rect_min_size = Vector2( 30, 0 )
custom_constants/vseparation = 2
custom_constants/hseparation = 2
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlignmentContainer" type="HBoxContainer" parent="Layer 2 - GUI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -168.0
margin_top = 1.0
margin_right = 490.0
margin_bottom = 5.0
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VCProsperity" type="VBoxContainer" parent="Layer 2 - GUI/AlignmentContainer"]
margin_left = 23.0
margin_right = 223.0
margin_bottom = 73.0
rect_min_size = Vector2( 200, 0 )
hint_tooltip = "KEY_PROSPERITY"
alignment = 1
__meta__ = {
"_editor_description_": "KEY_PROSPERITY"
}

[node name="CContainer" type="CenterContainer" parent="Layer 2 - GUI/AlignmentContainer/VCProsperity"]
margin_right = 200.0
margin_bottom = 29.0

[node name="Label" type="Label" parent="Layer 2 - GUI/AlignmentContainer/VCProsperity/CContainer"]
margin_left = 25.0
margin_right = 175.0
margin_bottom = 29.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "KEY_PROSPERITY"
align = 1

[node name="IconContainer" type="HBoxContainer" parent="Layer 2 - GUI/AlignmentContainer/VCProsperity"]
margin_top = 33.0
margin_right = 200.0
margin_bottom = 73.0
rect_min_size = Vector2( 150, 40 )
hint_tooltip = "KEY_PROSPERITY"
alignment = 1

[node name="SeparatorContainerA" type="TextureRect" parent="Layer 2 - GUI/AlignmentContainer"]
margin_left = 233.0
margin_right = 269.0
margin_bottom = 73.0
texture = ExtResource( 11 )

[node name="VCFavor" type="VBoxContainer" parent="Layer 2 - GUI/AlignmentContainer"]
margin_left = 279.0
margin_right = 429.0
margin_bottom = 73.0
alignment = 1

[node name="LabelContainer" type="CenterContainer" parent="Layer 2 - GUI/AlignmentContainer/VCFavor"]
margin_right = 150.0
margin_bottom = 29.0

[node name="Label" type="Label" parent="Layer 2 - GUI/AlignmentContainer/VCFavor/LabelContainer"]
margin_right = 150.0
margin_bottom = 29.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 5 )
text = "KEY_FAVOR"
align = 1

[node name="IconContainer" type="HBoxContainer" parent="Layer 2 - GUI/AlignmentContainer/VCFavor"]
margin_top = 33.0
margin_right = 150.0
margin_bottom = 73.0
rect_min_size = Vector2( 150, 40 )
alignment = 1

[node name="SeparatorContainerA2" type="TextureRect" parent="Layer 2 - GUI/AlignmentContainer"]
margin_left = 439.0
margin_right = 475.0
margin_bottom = 73.0
texture = ExtResource( 11 )

[node name="VCHonor" type="VBoxContainer" parent="Layer 2 - GUI/AlignmentContainer"]
margin_left = 485.0
margin_right = 635.0
margin_bottom = 73.0
alignment = 1

[node name="LabelContainer" type="CenterContainer" parent="Layer 2 - GUI/AlignmentContainer/VCHonor"]
margin_right = 150.0
margin_bottom = 29.0

[node name="Label" type="Label" parent="Layer 2 - GUI/AlignmentContainer/VCHonor/LabelContainer"]
margin_right = 150.0
margin_bottom = 29.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 5 )
text = "KEY_HONOR"
align = 1

[node name="IconContainer" type="HBoxContainer" parent="Layer 2 - GUI/AlignmentContainer/VCHonor"]
margin_top = 33.0
margin_right = 150.0
margin_bottom = 73.0
rect_min_size = Vector2( 150, 40 )
alignment = 1

[node name="GridEffectMy" type="HBoxContainer" parent="Layer 2 - GUI"]
margin_left = 176.263
margin_top = 32.527
margin_right = 516.263
margin_bottom = 72.527
rect_min_size = Vector2( 340, 40 )
rect_scale = Vector2( 0.9, 0.9 )
size_flags_horizontal = 0
custom_constants/separation = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusInterface" parent="Layer 2 - GUI" instance=ExtResource( 12 )]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 26, 74 )

[node name="RuneDetailInterface" parent="Layer 2 - GUI" instance=ExtResource( 13 )]
position = Vector2( 727, 177 )
scale = Vector2( 0.4, 0.4 )

[node name="Hand" type="Node2D" parent="Layer 2 - GUI"]
position = Vector2( 318, 275 )

[node name="RuneSlotPoint0" type="Position2D" parent="Layer 2 - GUI/Hand"]
position = Vector2( -75, 50 )

[node name="RuneSlotPoint1" type="Position2D" parent="Layer 2 - GUI/Hand"]
position = Vector2( 0, 50 )

[node name="RuneSlotPoint2" type="Position2D" parent="Layer 2 - GUI/Hand"]
position = Vector2( 75, 50 )

[node name="NextInterface" parent="Layer 2 - GUI" instance=ExtResource( 14 )]
position = Vector2( 1200, 230 )

[node name="BattleButton" type="TextureButton" parent="Layer 2 - GUI"]
margin_left = 454.0
margin_top = 282.0
margin_right = 614.0
margin_bottom = 442.0
rect_scale = Vector2( 0.5, 0.5 )
toggle_mode = true
texture_normal = ExtResource( 28 )
texture_pressed = ExtResource( 31 )
texture_hover = ExtResource( 29 )
texture_disabled = ExtResource( 30 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Layer 2 - GUI/BattleButton"]
margin_left = 24.0
margin_top = 54.0
margin_right = 131.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.878431, 0.823529, 0.694118, 1 )
text = "Battle"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hourglass" type="AnimatedSprite" parent="Layer 2 - GUI"]
position = Vector2( 1200, 396 )
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 7 )
animation = "tic-tac"
frame = 2

[node name="Line2D" type="Line2D" parent="Layer 2 - GUI"]
visible = false
position = Vector2( 292, 138 )
points = PoolVector2Array( 30, 50, 0, 0 )
width = 5.0
default_color = Color( 0.109804, 0.0117647, 0.0117647, 1 )
end_cap_mode = 2
sharp_limit = 50.0

[node name="Subtitle" type="NinePatchRect" parent="Layer 2 - GUI"]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 0.321569, 0.321569, 0.321569, 0.827451 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = 83.0
margin_right = 156.0
margin_bottom = 103.0
rect_min_size = Vector2( 300, 20 )
region_rect = Rect2( 400, 10, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CCSubtitle" type="CenterContainer" parent="Layer 2 - GUI/Subtitle"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -10.0
margin_right = 150.0
margin_bottom = 13.0
rect_min_size = Vector2( 300, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LSubtitle" type="Label" parent="Layer 2 - GUI/Subtitle/CCSubtitle"]
margin_left = 81.0
margin_right = 218.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 8 )
text = "KEY_TUTORIAL_00_1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="TweenEnd" type="Tween" parent="."]

[node name="Coin" parent="." instance=ExtResource( 23 )]
margin_left = 1077.0
margin_top = 244.0
margin_right = 1107.0
margin_bottom = 274.0

[node name="Axe" parent="." instance=ExtResource( 24 )]
margin_left = 1158.0
margin_top = 245.0
margin_right = 1188.0
margin_bottom = 275.0

[node name="Eye" parent="." instance=ExtResource( 25 )]
margin_left = 1117.0
margin_top = 244.0
margin_right = 1133.0
margin_bottom = 260.0

[node name="CEffect" type="VBoxContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 991.0
margin_top = 1.0
margin_right = 1007.0
margin_bottom = 28.0
hint_tooltip = "A"
custom_constants/separation = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="CEffect"]
modulate = Color( 0.117647, 0.717647, 0.0313726, 1 )
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 32 )

[node name="LTurn" type="Label" parent="CEffect"]
margin_top = 19.0
margin_right = 16.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 10 )
text = "3"
align = 1
valign = 1

[node name="CEInverse" type="VBoxContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 914.0
margin_top = 1.0
margin_right = 930.0
margin_bottom = 29.0
custom_constants/separation = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="CEInverse"]
modulate = Color( 0.921569, 0.145098, 0.0196078, 1 )
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 32 )
flip_v = true

[node name="LTurn" type="Label" parent="CEInverse"]
margin_top = 19.0
margin_right = 16.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 11 )
text = "3"
align = 1
valign = 1

[node name="FontRune" type="TextureRect" parent="."]
modulate = Color( 0.298039, 0.254902, 0.254902, 1 )
margin_left = 914.0
margin_top = 88.9547
margin_right = 930.0
margin_bottom = 104.955
texture = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/HIDE_RUNE_DETAIL = SubResource( 12 )
anims/HIDE_SUBTITLE = SubResource( 13 )
anims/HIDE_UNIT_STATUS = SubResource( 14 )
anims/SHOW_RUNE_DETAIL = SubResource( 15 )
anims/SHOW_SUBTITLE = SubResource( 16 )
anims/SHOW_UNIT_STATUS = SubResource( 17 )
[connection signal="pressed" from="Layer 2 - GUI/Bag/ButtonBag" to="." method="_on_ButtonBag_pressed"]
[connection signal="pressed" from="Layer 2 - GUI/BattleButton" to="." method="_on_BattleButton_pressed"]
[connection signal="tween_completed" from="TweenEnd" to="." method="_on_TweenEnd_tween_completed"]
